Add reciclador page

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 									<input name="remember" type="checkbox" value="Remember Me">Relembre-me
 								</label>
 							</div>
-							<a href="home.html" class="btn btn-primary">Acessar</a>
+							<a href="reciclador.html" class="btn btn-primary">Acessar</a>
 						</fieldset>
 					</form>
 				</div>
 			</div>
-		</div><!-- /.col-->
-	</div><!-- /.row -->	
+		</div>
+	</div>	
 	
 
 <script src="js/jquery-1.11.1.min.js"></script>
