--- a/reciclador.html
+++ b/reciclador.html
@@ -41,7 +41,7 @@
 			<li class="active"><a href="index.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
 			<li><a href="index.html"><em class="fa fa-dashboard">&nbsp;</em> Cooperativa</a></li>
 			<li><a href="index.html"><em class="fa fa-dashboard">&nbsp;</em> Coletor</a></li>
-			<li><a href="login.html"><em class="fa fa-power-off">&nbsp;</em> Sair</a></li>
+			<li><a href="index.html"><em class="fa fa-power-off">&nbsp;</em> Sair</a></li>
 		</ul>
 	</div><!--/.sidebar-->
 		
@@ -56,7 +56,7 @@
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="col-lg-8">
+			<div class="col-lg-12">
 				<h1 class="page-header">Pontuação</h1>
 			</div>
 		</div><!--/.row-->
@@ -109,7 +109,7 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-8">
+			<div class="col-lg-12">
 				<h1 class="page-header">Total coletado</h1>
 			</div>
 		</div>
