--- a/doacao-form.html
+++ b/doacao-form.html
@@ -25,8 +25,8 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span></button>
-				<a class="navbar-brand" href="#"><span>Reflex</span></a>
-			</div>
+					<img class="custom-image-logo-header" src="image/logo-transparente-flex.png" />
+				</div>
 		</div>
 	</nav>
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
@@ -38,9 +38,9 @@
 		</div>
 		<div class="divider"></div>
 		<ul class="nav menu">
-			<li class="active"><a href="index.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
-			<li><a href="index.html"><em class="fa fa-dashboard">&nbsp;</em> Cooperativa</a></li>
-			<li><a href="index.html"><em class="fa fa-dashboard">&nbsp;</em> Coletor</a></li>
+			<li class="active"><a href="reciclador.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
+			<li><a href="cooperativa.html"><em class="fa fa-dashboard">&nbsp;</em> Cooperativa</a></li>
+			<li><a href="transportador.html"><em class="fa fa-dashboard">&nbsp;</em> Transportador</a></li>
 			<li><a href="index.html"><em class="fa fa-power-off">&nbsp;</em> Sair</a></li>
 		</ul>
 	</div><!--/.sidebar-->
