--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,33 +16,35 @@
 </head>
 <body>
 	<div class="row">
+		<img class="custom-image-logo-login" src="image/logo-transparente-flex.png" />
 		<div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
 			<div class="login-panel panel panel-default">
-				<div class="panel-heading">Log in</div>
 				<div class="panel-body">
 					<form role="form">
 						<fieldset>
 							<div class="form-group">
-								<input class="form-control" placeholder="E-mail" name="email" type="email" autofocus="">
+								<input class="form-control" value="467.978.591-65" placeholder="CPF/CNPJ" name="email" type="text" autofocus="">
 							</div>
 							<div class="form-group">
-								<input class="form-control" placeholder="Senha" name="password" type="password" value="">
+								<input class="form-control" placeholder="Senha" name="password" type="password" value="123456">
 							</div>
 							<div class="checkbox">
 								<label>
 									<input name="remember" type="checkbox" value="Remember Me">Relembre-me
 								</label>
 							</div>
-							<a href="reciclador.html" class="btn btn-primary">Acessar</a>
+							<a style="margin-top: 15px;" href="reciclador.html" class="btn btn-primary">Acessar</a>
+							<div class="form-group" style="margin-top: 15px;">
+								<a href="#">Cadastre-se</a>
+							</div>
 						</fieldset>
 					</form>
 				</div>
 			</div>
 		</div>
 	</div>	
-	
 
-<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
