--- a/transportador.html
+++ b/transportador.html
@@ -24,9 +24,10 @@
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#sidebar-collapse"><span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-					<span class="icon-bar"></span></button>
-					<img class="custom-image-logo-header" src="image/logo-transparente-flex.png" />
-				</div>
+					<span class="icon-bar"></span>
+				</button>
+				<img class="custom-image-logo-header" src="image/logo-transparente-flex.png" />
+			</div>
 		</div>
 	</nav>
 	<div id="sidebar-collapse" class="col-sm-3 col-lg-2 sidebar">
@@ -38,75 +39,21 @@
 		</div>
 		<div class="divider"></div>
 		<ul class="nav menu">
-			<li class="active"><a href="reciclador-zerado.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
+			<li><a href="reciclador.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
 			<li><a href="cooperativa.html"><em class="fa fa-dashboard">&nbsp;</em> Cooperativa</a></li>
-			<li><a href="transportador.html.html"><em class="fa fa-dashboard">&nbsp;</em> Transportador</a></li>
+			<li class="active"><a href="transportador.html"><em class="fa fa-dashboard">&nbsp;</em> Transportador</a></li>
 			<li><a href="index.html"><em class="fa fa-power-off">&nbsp;</em> Sair</a></li>
 		</ul>
-	</div><!--/.sidebar-->
-		
+	</div>
 	<div class="col-sm-9 col-sm-offset-3 col-lg-10 col-lg-offset-2 main">
 		<div class="row">
 			<ol class="breadcrumb">
 				<li><a href="#">
 					<em class="fa fa-male"></em>
 				</a></li>
-				<li class="active">Reciclador</li>
+				<li class="active">Transporte de Material</li>
 			</ol>
 		</div><!--/.row-->
-		
-		<div class="row">
-			<div class="col-lg-12">
-				<h1 class="page-header">Pontuação</h1>
-			</div>
-		</div><!--/.row-->
-		
-		<div class="panel panel-container">
-			<div class="row">
-				<div class="col-xs-12 col-md-12 col-lg-12 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-wine-bottle color-blue"></em>
-							<div class="large">0</div>
-							<div class="text-muted">Pontos</div>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-money color-blue"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Crédito</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-blue panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-plane color-orange"></em>
-							<div class="large">0</div>
-							<div class="text-muted">Milhas</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-hand-paper-o"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Doação</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-mobile color-blue"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Crédito de recarga</div>
-						</div>
-					</div>
-				</div>
-			</div><!--/.row-->
-		</div>
 
 		<div class="row">
 			<div class="col-lg-12">
@@ -128,7 +75,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">0,5</div>
+											<div class="large">152,7</div>
 											<div class="text-muted">Garrafa Pet (Kg)</div>
 										</div>
 									</div>
@@ -136,7 +83,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">0,8</div>
+											<div class="large">348,2</div>
 											<div class="text-muted">Lata de alúminio (Kg)</div>
 										</div>
 									</div>
@@ -149,7 +96,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">17,1</div>
+											<div class="large">534,2</div>
 											<div class="text-muted">Garrafa Pet (Kg)</div>
 										</div>
 									</div>
@@ -157,7 +104,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">22,3</div>
+											<div class="large">911,9</div>
 											<div class="text-muted">Lata de alúminio (Kg)</div>
 										</div>
 									</div>
@@ -170,7 +117,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">198,4</div>
+											<div class="large">8.927,8</div>
 											<div class="text-muted">Garrafa Pet (Kg)</div>
 										</div>
 									</div>
@@ -178,7 +125,7 @@
 								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
 									<div class="panel panel-teal panel-widget border-right">
 										<div class="row no-padding">
-											<div class="large">221,5</div>
+											<div class="large">14.122,8</div>
 											<div class="text-muted">Lata de alúminio (Kg)</div>
 										</div>
 									</div>
