--- a/doacao-form.html
+++ b/doacao-form.html
@@ -63,7 +63,7 @@
 
 		<div class="panel panel-container">
 			<div class="panel panel-default">
-				<div class="panel-heading">Forms</div>
+				<div class="panel-heading">Selecione o valor e a instituição</div>
 				<div class="panel-body">
 					<form role="form">
 						<div class="form-group">
@@ -78,7 +78,7 @@
 								<option>Criança Solidaria</option>
 							</select>
 						</div>
-						<a href="reciclador-zerado.html" class="btn btn-primary">Acessar</a>
+						<a href="reciclador-zerado.html" class="btn btn-primary">DOAR</a>
 					</form>
 				</div>
 			</div><!-- /.panel-->
