--- a/reciclador-zerado.html
+++ b/reciclador-zerado.html
@@ -56,138 +56,147 @@
 		</div><!--/.row-->
 		
 		<div class="row">
-			<div class="col-lg-12">
-				<h1 class="page-header">Pontuação</h1>
-			</div>
-		</div><!--/.row-->
-		
-		<div class="panel panel-container">
-			<div class="row">
-				<div class="col-xs-12 col-md-12 col-lg-12 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-wine-bottle color-blue"></em>
-							<div class="large">0</div>
-							<div class="text-muted">Pontos</div>
-						</div>
+			<div class="col-md-6">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1 class="page-header">Pontuação</h1>
 					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-money color-blue"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Crédito</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-blue panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-plane color-orange"></em>
-							<div class="large">0</div>
-							<div class="text-muted">Milhas</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-hand-paper-o"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Doação</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-					<div class="panel panel-teal panel-widget border-right">
-						<div class="row no-padding"><em class="fa fa-xl fa-mobile color-blue"></em>
-							<div class="large">R$ 0,00</div>
-							<div class="text-muted">Crédito de recarga</div>
-						</div>
-					</div>
-				</div>
-			</div><!--/.row-->
-		</div>
-
-		<div class="row">
-			<div class="col-lg-12">
-				<h1 class="page-header">Total coletado</h1>
-			</div>
-		</div>
-		<div class="panel panel-container">
-			<div class="panel panel-default">
-				<div class="panel-body tabs">
-					<ul class="nav nav-tabs">
-						<li class="active"><a href="#tab1" data-toggle="tab">Último dia</a></li>
-						<li><a href="#tab2" data-toggle="tab">Mês</a></li>
-						<li><a href="#tab3" data-toggle="tab">Ano</a></li>
-					</ul>
-					<div class="tab-content">
-						<div class="tab-pane fade in active" id="tab1">
-							<h4>Último dia</h4>
-							<div class="row">
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">0,5</div>
-											<div class="text-muted">Garrafa Pet (Kg)</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">0,8</div>
-											<div class="text-muted">Lata de alúminio (Kg)</div>
-										</div>
-									</div>
+				</div><!--/.row-->
+				
+				<div class="panel panel-container">
+					<div class="row">
+						<div class="col-xs-12 col-md-12 col-lg-12 no-padding">
+							<div class="panel panel-teal panel-widget border-right">
+								<div class="row no-padding"><em class="fa fa-wine-bottle color-blue"></em>
+									<div class="large">0</div>
+									<div class="text-muted">Pontos</div>
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane fade" id="tab2">
-							<h4>Mês</h4>
-							<div class="row">
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">17,1</div>
-											<div class="text-muted">Garrafa Pet (Kg)</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">22,3</div>
-											<div class="text-muted">Lata de alúminio (Kg)</div>
-										</div>
-									</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6 col-md-6 col-lg-6 no-padding custom-clickable">
+							<div class="panel panel-teal panel-widget border-right">
+								<div class="row no-padding"><em class="fa fa-xl fa-money color-blue"></em>
+									<div class="large">R$ 0,00</div>
+									<div class="text-muted">Crédito</div>
 								</div>
 							</div>
 						</div>
-						<div class="tab-pane fade" id="tab3">
-							<h4>Ano</h4>
-							<div class="row">
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">198,4</div>
-											<div class="text-muted">Garrafa Pet (Kg)</div>
-										</div>
-									</div>
+						<div class="col-xs-6 col-md-6 col-lg-6 no-padding custom-clickable">
+							<div class="panel panel-blue panel-widget border-right">
+								<div class="row no-padding"><em class="fa fa-xl fa-plane color-orange"></em>
+									<div class="large">0</div>
+									<div class="text-muted">Milhas</div>
 								</div>
-								<div class="col-xs-6 col-md-3 col-lg-3 no-padding">
-									<div class="panel panel-teal panel-widget border-right">
-										<div class="row no-padding">
-											<div class="large">221,5</div>
-											<div class="text-muted">Lata de alúminio (Kg)</div>
-										</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-xs-6 col-md-6 col-lg-6 no-padding custom-clickable">
+							<div class="panel panel-teal panel-widget border-right">
+								<a href="doacao-form.html" class="custom-not-active">
+									<div class="row no-padding"><em class="fa fa-xl fa-hand-paper-o"></em>
+										<div class="large">R$ 0,00</div>
+										<div class="text-muted">Doação</div>
 									</div>
+								</a>
+							</div>
+						</div>
+						<div class="col-xs-6 col-md-6 col-lg-6 no-padding custom-clickable">
+							<div class="panel panel-teal panel-widget border-right">
+								<div class="row no-padding"><em class="fa fa-xl fa-mobile color-blue"></em>
+									<div class="large">R$ 0,00</div>
+									<div class="text-muted">Crédito de recarga</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div><!--/.panel-->
+			</div>
+			<div class="col-md-6">
+				<div class="row">
+					<div class="col-lg-12">
+						<h1 class="page-header">Total coletado</h1>
+					</div>
+				</div>
+				<div class="panel panel-container">
+					<div class="panel panel-default">
+						<div class="panel-body tabs">
+							<ul class="nav nav-tabs">
+								<li class="active"><a href="#tab1" data-toggle="tab">Último dia</a></li>
+								<li><a href="#tab2" data-toggle="tab">Mês</a></li>
+								<li><a href="#tab3" data-toggle="tab">Ano</a></li>
+							</ul>
+							<div class="tab-content">
+								<div class="tab-pane fade in active" id="tab1">
+									<h4>Último dia</h4>
+									<div class="row">
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">0,5</div>
+													<div class="text-muted">Garrafa Pet (Kg)</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">0,8</div>
+													<div class="text-muted">Lata de alúminio (Kg)</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="tab-pane fade" id="tab2">
+									<h4>Mês</h4>
+									<div class="row">
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">17,1</div>
+													<div class="text-muted">Garrafa Pet (Kg)</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">22,3</div>
+													<div class="text-muted">Lata de alúminio (Kg)</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="tab-pane fade" id="tab3">
+									<h4>Ano</h4>
+									<div class="row">
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">198,4</div>
+													<div class="text-muted">Garrafa Pet (Kg)</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-xs-6 col-md-6 col-lg-6 no-padding">
+											<div class="panel panel-teal panel-widget border-right">
+												<div class="row no-padding">
+													<div class="large">221,5</div>
+													<div class="text-muted">Lata de alúminio (Kg)</div>
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div><!--/.panel-->
+				</div>
+			</div>
 		</div>
 	</div>	<!--/.main-->
 	
