Fix bug in menu

--- a/reciclador-zerado.html
+++ b/reciclador-zerado.html
@@ -40,7 +40,7 @@
 		<ul class="nav menu">
 			<li class="active"><a href="reciclador-zerado.html"><em class="fa fa-male">&nbsp;</em> Reciclador</a></li>
 			<li><a href="cooperativa.html"><em class="fa fa-dashboard">&nbsp;</em> Cooperativa</a></li>
-			<li><a href="transportador.html.html"><em class="fa fa-dashboard">&nbsp;</em> Transportador</a></li>
+			<li><a href="transportador.html"><em class="fa fa-dashboard">&nbsp;</em> Transportador</a></li>
 			<li><a href="index.html"><em class="fa fa-power-off">&nbsp;</em> Sair</a></li>
 		</ul>
 	</div><!--/.sidebar-->
